--- a/03-02-DNS.md
+++ b/03-02-DNS.md
@@ -1,22 +1,28 @@
 ======================== DNS ====================================
-	Ø Required Package : bind-9*
+
+ Required Package : bind-9*
 	
-	Ø Port - 53 (UDP )
+ Port - 53 (UDP )
 	
 	
-	Ø Configuration file:
+Configuration file:
 	
-		○ /etc/named.conf
-		○ /var/named/xyz
-		○ /etc/resolv.conf
+        
+        ○ /etc/named.conf
+	
+        ○ /var/named/xyz
+        
+	○ /etc/resolv.conf
 		
 		
-	Ø Service : named
+	Service : named
 
 
 Step1:
 
+
 cat /etc/named.rfc1912.zones >> /etc/named.conf
+
 
 
 Step2: Modify /etc/named.conf
