--- a/03-02-DNS.md
+++ b/03-02-DNS.md
@@ -205,3 +205,9 @@ STEP1:
 Modify "/etc/resolv.conf"
 search devops.com 
 nameserver 192.168.*.* [IP of your DNS server]![image](https://user-images.githubusercontent.com/87597729/210302443-3285e1c6-b470-4cf7-8d8c-cdd7be424d07.png)
+
+
+# StickyBit
+
+![image](https://user-images.githubusercontent.com/87597729/210706105-73a8cf83-c1bb-4e09-9356-7f4590616df0.png)
+
