--- a/03-02-DNS.md
+++ b/03-02-DNS.md
@@ -211,3 +211,47 @@ nameserver 192.168.*.* [IP of your DNS server]![image](https://user-images.githu
 
 ![image](https://user-images.githubusercontent.com/87597729/210706105-73a8cf83-c1bb-4e09-9356-7f4590616df0.png)
 
+
+# Samba:
+
+Services:
+	Ø SMB
+	Ø NMB
+	Ø Winbind
+
+Package: Samba
+Configuration File : /etc/samba.smb.conf
+Services: smb
+
+
+
+
+
+Step1: Install "samba" Package
+Step2: Modify /etc/samba.smb.conf file
+
+
+
+Step3: Enable and start the service
+
+
+
+Step4: Create Samba user
+
+
+
+
+
+
+Step5: Create a directory and keep some files on samba server
+
+
+
+Step6: Try to access from Windows host
+
+
+
+
+![image](https://user-images.githubusercontent.com/87597729/210933420-539e9c29-6034-4e24-9d3d-5c932679a220.png)
+
+
